infra/k8s/auth-mongo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo

# auth-mongo-db service
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  # default type is ClusterIP if not specified
  # type: ClusterIP
  selector:
    app: auth-mongo
  ports:
    - port: 27017
      targetPort: 27017
      name: db
      protocol: TCP
